[package]
name = "gitify"
authors = ["florianfelix"]
description = "Create repository on Github and upload the current folder"
homepage = "https://github.com/florianfelix/gitify"
repository = "https://github.com/florianfelix/gitify"
license = "MIT OR Apache-2.0"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.5"
confy = "0.4"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
dirs = "4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
open = "2.0.1"
